--- a/style.css
+++ b/style.css
@@ -77,13 +77,17 @@ header{
     padding: 1rem 2rem;
     margin-top:10rem;
     border-top: 1px solid var(--card-bg);
-    display: flex;
-    justify-content: space-around;
+   
+    
     width: 100%;
     position: sticky;
     flex-wrap: wrap;
     height: 20rem;
     
+}
+.foooter{
+display: flex;
+justify-content: space-around;
 }
 .logo-footer{
     font-size: 20px;
@@ -533,10 +537,14 @@ p{
     text-decoration: underline;
     color: #00bbff;
 }
+.footer-bottom{
+    text-align: center;
 
+}
 .footerline{
-     margin-top: 3rem;
-        
+       width: 70%; 
+       margin-left: 15rem;
+       margin-top: 1rem;
     }
 
 .cpr{
